--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -22,6 +22,13 @@
     }
 %---------------------------------------------------------
   \cventry
+    {Erasmus} % Degree
+    {Fachhochschule Technikum Wien} % Institution
+    {Wien, Austria} % Location
+    {Sept. 2016 - Feb. 2017} % Date(s)
+    {}
+%---------------------------------------------------------
+  \cventry
     {PhD in Biomedical Engineering} % Degree
     {Instituto Superior Técnico - Univeristy of Lisbon} % Institution
     {Lisbon, Portugal} % Location
