--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -67,8 +67,7 @@
 {Jun. 2016} % Date(s)
 {
   \begin{cvitems} % Description(s) of tasks/responsibilities
-    \item {Developed BiToys - a game for ADHD children promoting relaxation and concentration.▪︎ Developed BiToys- a game for ADHD children promoting relaxation and concentration.
-    }
+    \item {Developed BiToys - a game for ADHD children promoting relaxation and concentration.}
   \end{cvitems}
 }
 %---------------------------------------------------------
