--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -16,5 +16,5 @@ My PhD focused on developing machine learning algorithms for emotion recognition
 
 Additionally, my PhD journey has been marked by significant contributions to over 10+ projects (inluding 3 MSc thesis co-supervision), along with active involvement in 9 research collaborations (6 national, 3 international) and participation in 7 scientific fairs.
 
-Besides scientific output, my notable work includes the end-to-end development of EmotiphAI, a software platform for emotion recognition and collection of physiological signals in an audience, showcased at the 2019 WebSummit and European Commission's Resonances III Festival. This project underlined my multi-faced skills in software architecture, front-end and back-end development, database management, and signal processing, reflecting my commitment to learning and applying new technologies.
+Besides scientific output, my notable work includes the end-to-end development of EmotiphAI, a software platform for emotion recognition and collection of physiological signals in an audience, showcased at the 2019 WebSummit and European Commission's Resonances III Festival. This project underlined my multi-faced skills in software architecture, front-end and back-end development, and database management, reflecting my commitment to learning and applying new technologies.
 \end{cvparagraph}
