--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -1,5 +1,6 @@
-% !TEX program = xelatex
+%!TEX program = xelatex
 %!TEX encoding = UTF-8 Unicode
+%! TEX root = ../resume.tex
 % Awesome CV LaTeX Template for CV/Resume
 %
 % This template has been downloaded from:
@@ -68,7 +69,7 @@
 % \medium{madium-id}
 % \kaggle{kaggle-id}
 % \hackerrank{hackerrank-id}
-% \googlescholar{googlescholar-id}{name-to-display}
+ \googlescholar{PWGcWqQAAAAJ&hl}{Patricia Bota}
 %% \firstname and \lastname will be used
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra information}
@@ -101,10 +102,12 @@
 %\input{resume/certificates.tex}
 % \input{resume/presentation.tex}
 % \input{resume/writing.tex}
-% \input{resume/committees.tex}
+\input{resume/teaching.tex}
 \input{resume/education.tex}
+%\input{resume/extracurricular.tex}
 \input{resume/skills.tex}
-% \input{resume/extracurricular.tex}
+\input{resume/collaborations.tex}
+\input{resume/publications.tex}
 
 
 %-------------------------------------------------------------------------------
