--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -7,36 +7,25 @@
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
-\begin{cventries}
-
+\begin{cvhonors}
 %---------------------------------------------------------
-  \cventry
-    {Master in Biomedical Engineering} % Degree
-    {NOVA Univeristy of Lisbon} % Institution
+  \cvhonor
+    {\;PhD in Biomedical Engineering} % Degree
+    {IST | ULisboa} % Institution
     {Lisbon, Portugal} % Location
-    {Sep. 2013 - Nov. 2018} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Finished with grade of 16.}
-      \end{cvitems}
-    }
+    {2019 - 2024} % Date(s)
 %---------------------------------------------------------
-  \cventry
-    {Erasmus} % Degree
+    \cvhonor
+    {\;Master in Biomedical Engineering} % Position
+    {NOVA University of Lisbon} % Committee
+    {Lisbon, Portugal} % Location
+    {2013 - 2018} % Date(s)
+%---------------------------------------------------------
+  \cvhonor
+    {\;Erasmus} % Degree
     {Fachhochschule Technikum Wien} % Institution
     {Wien, Austria} % Location
-    {Sept. 2016 - Feb. 2017} % Date(s)
-    {}
+    {2016 - 2017} % Date(s)
+
 %---------------------------------------------------------
-  \cventry
-    {PhD in Biomedical Engineering} % Degree
-    {Instituto Superior Técnico - Univeristy of Lisbon} % Institution
-    {Lisbon, Portugal} % Location
-    {Jan. 2019 - March. 2024} % Date(s)
-    {
-      %\begin{cvitems} % Description(s) bullet points
-      %  \item {}
-      %\end{cvitems}
-    }
-%---------------------------------------------------------
-\end{cventries}
+\end{cvhonors}
