--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Work Experience}
+\cvsection{Experience}
 
 
 %-------------------------------------------------------------------------------
@@ -11,64 +11,65 @@
 
 %---------------------------------------------------------
   \cventry
-    {Logistics Coordinator} % Job title
-    {ScientISST} % Organization
-    {Lisbon, Portugal} % Location
-    {Jan. 2022 - Present} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Designed and implemented an infrastructure to manage the ScientISST inventory.}
-        \item {Organized and participated in numerous outreach activities to promote the ScientISST project.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Phd Student/ IT Researcher Assistant} % Job title
-    {Instituto Superior Técnico - University of Lisbon; Instituto de Telecomunicações} % Organization
+    {Biomedical Eng. PhD Student | Researcher} % Job title
+    {Instituto de Telecomunicações} % Organization
     {Lisbon, Portugal} % Location
     {Jan. 2019 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Development of Machine Learning algorithms for emotion recognition based on physiological data.}
-        \item {Development feature extraction libraries for time series. Available in opensource in BioSPPy, a Python toolbox for biosignal processing}
-        \item {Development of WiFi and Bluetooth communication module for group data collection using the ScientISST, BITalino, BITalino R-IoT, and FMCI XinhuaNet devices.}
-        \item {Development of an user graphical interface to observe the collected data in real-time.}
+        \item[]\textbf{Emotion Recognition}
+        \item{Developmed Machine Learning algorithms for emotion recognition based on multimodal physiological data with superior to comparable results to the state-of-the-art for selected datasets (SJR: Q2; IF: 3.847 [1]). Survey of the field (SRJ: Q1; IF: 3.9 [2]).}
+        \item {Developed feature extraction libraries (time, frequency, time-frequency, cepstral, phase-space) available at BioSPPy, a Python toolbox for biosignal processing (SRJ: Q2; IF: 3.4 [3], under review).}
+        \item {Created a real-world dataset for group emotion recognition based on physiological data, containing 31 movie sessions, 380+ hours of data from over 190 subjects. (SJQ: Q1; IF: 9.8 [4]).}
+        \item[] \textbf{Back-end Development}
+        \item {Developed of WiFi and Bluetooth communication module for group data collection and storage using: ScientISST, BITalino, BITalino R-IoT, and FMCI XinhuaNet devices. Reported multimodal physiological data collection using 20 devices at 25 Hz and 10 devices at 60 Hz (SJR: Q1; IF: 5.606 [5]).}
+        \item[] \textbf{Front-end Development}
+        \item {Developed an user graphical interface to observe and annotate physiological data in real‑time (SJR:Q1; IF: 13.99 [6], under review).} 
+        \item[]\textbf {MSc and BSc Students Supervision}
+        \item {Co-supervised over 3 MSc thesis and 9 BSc projects. Four papers published (2 Q1, 1 Q1 under revision and 2 Int'l Conf.).}
+        %\item[] \textbf{Showcases}
+        %\item {Dissemination of FMCI Xinhuanet data collection devices at 2019 Web Summit, Lisbon. Outreach activity and demonstration interface of the device working in real-time.}
+        %\item {DataWe: A neurocinematic system for studying collective decision-making. Developed the back-end infrastructure for group physiological data collection. Project in collaboration with Tallinn University. Displayed at European Commission Joint Research Centre Ispra Sector, Italy.}
+        %\item {Online theatre as a research instrument. Developed the back-end infrastructure for group physiological data collection. Project in collaboration with Univ. of Tartu.}
       \end{cvitems}
     }
+%--------------------------------------------------------- 
+\cventry
+{Logistics Coordinator} % Job title
+{ScientISST - Biomedical Engineering Student Group} % Organization
+{Lisbon, Portugal} % Location
+{Jan. 2022 - Present} % Date(s)
+{
+  \begin{cvitems} % Description(s) of tasks/responsibilities
+    \item[] {\textbf{Operations Coordinator}}
+    \item {Managed the instrumentation inventory.}
+    \item[] {\textbf{Outreach}}
+    \item {Organized and participated in 10+ outreach activities (scientific fairs, instagram posts, lab visits).}
+  \end{cvitems}
+}
 %---------------------------------------------------------
 \cventry
-{Visiting Student} % Job title
+{Visiting Student working on Emotion Recognition using Deep Learning} % Job title
 {Centrum Wiskunde \& Informatica} % Organization
 {Amsterdam, Netherlands} % Location
 {Jan. 2022 - Jul. 2022} % Date(s)
 {
   \begin{cvitems} % Description(s) of tasks/responsibilities
-    \item {Development of Weighted Group Synchrony, a Deep Learning algorithm for group emotion recognition based on physiological synchrony.}
+    \item {Developed novel interpersonal weighted group synchrony approach for emotion recognition, surpassing previous work for K-EmoCon dataset on arousal, and providing a new baseline on AMIGOS for long-videos (SJR:Q1; IF: 13.99 [7]).}
   \end{cvitems}
 }
 %---------------------------------------------------------
 \cventry
-{Research Assistant} % Job title
+{Research Assistant on Machine Learning} % Job title
 {Fraunhofer Portugal} % Organization
 {Lisbon, Portugal} % Location
 {Feb. 2018 - Jan. 2019} % Date(s)
 {
   \begin{cvitems} % Description(s) of tasks/responsibilities
-    \item {Implemented Human Activity Recognition algorithms based on smartphone built-in inertial sensors.}
-    \item {Developed TSFEL - a library for time series feature extraction and selection.}
+    \item {Implemented Semi-Supervised Active Learning for Human Activity Recognition algorithms based on smartphone inertial sensors, reducing the annotated data by 89+\% while maintaining an accurate performance (SJR: Q1; IF: 3.847 [8]).}
+    \item {Developed TSFEL - a library for time series feature extraction and selection (SRJ: Q2; IF: 3.4 [9]).}
   \end{cvitems}
 }
-%---------------------------------------------------------
-\cventry
-{Summer Internship} % Job title
-{PLUX - Wireless Biosignals S.A.} % Organization
-{Lisbon, Portugal} % Location
-{Jun. 2016} % Date(s)
-{
-  \begin{cvitems} % Description(s) of tasks/responsibilities
-    \item {Developed BiToys - a game for ADHD children promoting relaxation and concentration.}
-  \end{cvitems}
-}
+
 %---------------------------------------------------------
 \end{cventries}
