--- a/examples/resume/extracurricular.tex
+++ b/examples/resume/extracurricular.tex
@@ -10,32 +10,18 @@
 \begin{cventries}
 
 %---------------------------------------------------------
-  \cventry
-    {Core Member \& President at 2013} % Affiliation/role
-    {PoApper (Developers' Network of POSTECH)} % Organization/group
-    {Pohang, S.Korea} % Location
-    {Jun. 2010 - Jun. 2017} % Date(s)
+ \cventry
+    {Logistics Coordinator} % Job title
+    {ScientISST - Biomedical engineering for everyone} % Organization
+    {Lisbon, Portugal} % Location
+    {Jan. 2022 - Present} % Date(s)
     {
-      \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Reformed the society focusing on software engineering and building network on and off campus.}
-        \item {Proposed various marketing and network activities to raise awareness.}
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item[] {\textbf{Logistics Coordinator}}
+        \item {Manager including the implemented an infrastructure to manage the ScientISST inventory. Managed instrumentation inventory.}
+        \item[] {\textbf{Outreach}}
+        \item {Organized and participated in 10+ outreach activities to promote the ScientISST project (scientific fairs, instagram posts, lab visits).}
       \end{cvitems}
     }
-
-%---------------------------------------------------------
-  \cventry
-    {Member} % Affiliation/role
-    {PLUS (Laboratory for UNIX Security in POSTECH)} % Organization/group
-    {Pohang, S.Korea} % Location
-    {Sep. 2010 - Oct. 2011} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Gained expertise in hacking \& security areas, especially about internal of operating system based on UNIX and several exploit techniques.}
-        \item {Participated on several hacking competition and won a good award.}
-        \item {Conducted periodic security checks on overall IT system as a member of POSTECH CERT.}
-        \item {Conducted penetration testing commissioned by national agency and corporation.}
-      \end{cvitems}
-    }
-
 %---------------------------------------------------------
 \end{cventries}
