--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -30,7 +30,12 @@
         Javascript, HTML, CSS, Jinja2, D3, Jquery
     \end{minipage}
     }
-
+    \cvskill
+    {Languages}
+    {\begin{minipage}[t]{0.7\textwidth}
+        Portuguese (native), English (fluent), Spanish (reading and listening comprehension), German (beginner and eager to learn)
+    \end{minipage}
+    }
 \end{cvskills}  
 
 %---------------------------------------------------------
