--- a/examples/resume/teaching.tex
+++ b/examples/resume/teaching.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Program Committees}
+\cvsection{Teaching Experience}
 
 
 %-------------------------------------------------------------------------------
@@ -10,18 +10,16 @@
 \begin{cvhonors}
 
 %---------------------------------------------------------
-  \cvhonor
-    {Problem Writer} % Position
-    {2016 CODEGATE Hacking Competition World Final} % Committee
-    {S.Korea} % Location
-    {2016} % Date(s)
-
-%---------------------------------------------------------
-  \cvhonor
-    {Organizer \& Co-director} % Position
-    {1st POSTECH Hackathon} % Committee
-    {S.Korea} % Location
-    {2013} % Date(s)
+     \cvhonor
+    {Teaching Assistant} % Position
+    {Machine Learning in Bioengineering. Responsible for practical lectures and group projects orientation and evaluation. Lecture on classifier fusion.} % Committee
+    {IST | ULisboa} % Location
+    {2020-2023} % Date(s) 
+\cvhonor
+    {Teaching Assistant} % Position
+    {Portfólio MEEC. Responsible for practical lectures.} % Committee
+    {IST | ULisboa} % Location
+    {2019} % Date(s)
 
 %---------------------------------------------------------
 \end{cvhonors}
