--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -10,11 +10,11 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-PhD candidate in Biomedical Engineering at University of Lisbon - IST and researcher at Instituto de Telecomunicações, specializing in the intersection of engineering and healthcare. 
+PhD finalist in Biomedical Engineering at Univ. of Lisbon (ULisboa), Instituto Superior Técnico (IST) and researcher at Instituto de Telecomunicações (IT), with around 6 years of research experience.
 
-My PhD focused on developing machine learning algorithms for emotion recognition from physiological signals, which resulted in a strong publication record with 10+ papers in peer-reviewed journals (8 in Q1, 2 in Q2 categories, 4 under revision). 
+My PhD focused on developing artificial intelligence algorithms for emotion recognition from physiological signals, which resulted in a strong publication record with 10+ papers in peer-reviewed journals (8 in Q1, 2 in Q2, 3 under revision). 
 
-Additionally, my PhD journey has been marked by significant contributions to over 10+ projects (inluding 3 MSc thesis co-supervision), along with active involvement in 9 research collaborations (6 national, 3 international) and participation in 7 scientific fairs.
+Additionally, my PhD journey has been marked by contributions to over 15+ collaborations (6 international, 9 national), 5+ workshops (including a NATO talk), and 5+ scientific fairs.
 
-Besides scientific output, my notable work includes the end-to-end development of EmotiphAI, a software platform for emotion recognition and collection of physiological signals in an audience, showcased at the 2019 WebSummit and European Commission's Resonances III Festival. This project underlined my multi-faced skills in software architecture, front-end and back-end development, and database management, reflecting my commitment to learning and applying new technologies.
+Besides scientific output, my work includes the end-to-end development of EmotiphAI, a platform for group physiological data collection in an audience, showcased at the 2019 WebSummit, at the European Commission's Resonances III Fest. and an online theatre in collaboration with Univ. Tartu. This project underlined my multi-faced skills in software architecture, front-end and back-end, and reflected my commitment to learning and applying new technologies.
 \end{cvparagraph}
